--- a/main.css
+++ b/main.css
@@ -114,8 +114,9 @@ body{
 
 .custom-list{
     padding: 0;
-    margin-top: 5px;
+    margin-top: 0;
     margin-left: 15px;
+    margin-bottom: 10px;
     list-style: none;
 }
 .custom-list>li{
