--- a/main.css
+++ b/main.css
@@ -3,6 +3,11 @@
     color: rgb(50, 50, 50);
 }
 
+h1{
+    padding: 0;
+    margin: 0;
+}
+
 body{
     background: rgb(169, 169, 169);
     margin: 0;
@@ -142,4 +147,29 @@ body{
 
 .page-break{
     page-break-before: always;
+}
+
+.button{
+    text-decoration: none;
+}
+.button, ul.nav-ul li{
+    padding: 5px;
+    background: rgb(220, 220, 220);
+    border: 1px solid rgb(220, 220, 220);
+    border-radius: 5px;
+    margin-bottom: 2px;
+    cursor: pointer;
+}
+ul.nav-ul li{
+    display: inline-block;
+}
+.button a, ul.nav-ul li a{
+    text-decoration: none;
+}
+
+.simple-button{
+    text-decoration: none;
+    border: 1px solid rgb(240, 240, 240);
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
