--- a/TRX-workout/css/main.css
+++ b/TRX-workout/css/main.css
@@ -86,7 +86,7 @@ div.TRX-pager{
 
     background: rgb(253, 228, 1);
 
-    transition: left 1.5s;
+    transition: 1.5s;
     box-shadow: 10px 0px 10px #0000000f;
 }
 
@@ -137,6 +137,85 @@ div.TRX-pager{
     margin-top: -5px; 
 }
 
-#page3{
+#page3 .Elapsed-timer{
+    text-align: left;
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+}
+
+#page3 .Remaining-timer{
+    text-align: right;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+#page3 .timer.circle {
+    position: relative;
+
+	width: 60vw;
+    height: 60vh;
+    max-width: 60vh;
+    max-height: 60vw;
     
+	-moz-border-radius: 50%;
+	-webkit-border-radius: 50%;
+    border-radius: 50%;
+    border: 5px solid #212529;
+
+    text-align: center;
+}
+
+#page3 div.timer.circle > div.inner-timer {
+    position: absolute;
+    top: 18%;
+    left: 0;
+    right: 0;
+}
+
+#page3 div.image-div{
+    /* height: 100px;
+    width: 100px; */
+    background: black;
+    border: 5px solid white;
+    box-shadow: 0 0 2px #0000006b;
+}
+
+#page3 div.image-div > img{
+    height: 60vh;
+    max-height: 60vw;
+}
+
+#page3 #next-text{
+    position: absolute;
+    font-size: 6vh;
+    top: -4.5vh;
+    left: 0;
+    right: 0;
+    color: white;
+    background: transparent;
+    text-shadow: 0 0 20px black;
+}
+
+
+body > div.warning-sign{
+    background: black;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100vw;
+    height: 120vh;
+
+    z-index: 1000000;
+}
+body > div.warning-sign > div{
+    margin: 30%;
+    font-size: 10vw;
+    color: white;
+}
+
+@media (orientation: landscape) {
+    body > div.warning-sign{display: none;}
 }
