--- a/TRX-workout/css/main.css
+++ b/TRX-workout/css/main.css
@@ -78,7 +78,7 @@ div.TRX-pager{
     top: 0;
     left: 0;
 
-    padding: 20px 75px;
+    padding: 1.7vw 7.5vw;
     margin: 0;
 
     height: 100%;
@@ -88,6 +88,9 @@ div.TRX-pager{
 
     transition: 1.5s;
     box-shadow: 10px 0px 10px #0000000f;
+
+    overflow: hidden;
+    overflow-y: auto;
 }
 
 .col-sm{
@@ -218,4 +221,37 @@ body > div.warning-sign > div{
 
 @media (orientation: landscape) {
     body > div.warning-sign{display: none;}
+}
+
+/* iphone 5 */
+/* @media screen and (device-aspect-ratio: 40/71){ */
+@media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2){
+    *{
+        font-size: 2.5vw;
+    }
+
+    h1{
+        font-size: 4.5vw;
+    }
+
+    .col{
+        padding: 0 !important;
+    }
+
+    .list-group{
+        padding: 0 !important;
+    }
+
+    #page0 h1{
+        margin-left: 5vw;
+        margin-bottom: 7vh;
+    }
+
+    #page1 button:first-child, #page2 button:first-child, #page3 button:first-child{
+        margin-left: 5vw;
+    }
+
+    #page2 button:last-child{
+        height: 67px !important;
+    }
 }
