--- a/TRX-workout/css/main.css
+++ b/TRX-workout/css/main.css
@@ -147,6 +147,32 @@ div.TRX-pager{
     left: 10px;
 }
 
+#page3 .prev-exercise{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    /* width: 50px; */
+    display: flex;
+    flex-flow: column;
+}
+#page3 .prev-exercise>button{
+    padding: 40px 15px;
+}
+
+#page3 .next-exercise{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    /* width: 50px; */
+    display: flex;
+    flex-flow: column;
+}
+#page3 .next-exercise>button{
+    padding: 40px 15px;
+}
+
 #page3 .Remaining-timer{
     text-align: right;
     position: absolute;
@@ -168,6 +194,18 @@ div.TRX-pager{
     border: 5px solid #212529;
 
     text-align: center;
+    box-shadow: inset 0 0 20px 10px #00000060;
+}
+
+@keyframes timer-pulse-keyframe {
+    0% {box-shadow: inset 0 0 20px 10px #00000060; border: 5px solid #212529;}
+    50% {box-shadow: inset 0 0 20px 10px #00000070; border: 5px solid #00000070;}
+    100% {box-shadow: inset 0 0 20px 10px #00000060; border: 5px solid #212529;}
+}
+
+.timer-pulse{
+    animation-name: timer-pulse-keyframe;
+    animation-duration: 0.7s;
 }
 
 #page3 div.timer.circle > div.inner-timer {
@@ -224,7 +262,6 @@ body > div.warning-sign > div{
 }
 
 /* iphone 5 */
-/* @media screen and (device-aspect-ratio: 40/71){ */
 @media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2){
     *{
         font-size: 2.5vw;
