--- a/TRX-workout/css/main.css
+++ b/TRX-workout/css/main.css
@@ -1,3 +1,29 @@
+*{
+    font-size: 2.5vw;
+}
+
+h1{
+    font-size: 4.5vw;
+}
+
+.col{
+    padding: 0 !important;
+}
+
+.list-group{
+    padding: 0 !important;
+}
+
+#page0 h1{
+    margin-left: 5vw;
+    margin-bottom: 7vh;
+}
+
+#page1 button:first-child, #page2 button:first-child, #page3 button:first-child{
+    margin-left: 5vw;
+}
+
+
 @font-face {
     font-family: 'trx-like';
     src: url('../font/Familiar Pro-Bold.otf');
@@ -31,7 +57,7 @@ div.wrapper{
 div.wrapper > div.trx-logo{
     position: absolute;
     top: 0;
-    left: 10;
+    left: 10px;
 
     background: black;
     color: white;
@@ -128,7 +154,6 @@ div.TRX-pager{
 }
 
 #page2 ul > li{
-    height: 34px;
     padding: 6px;
     padding-left: 10px;
 }
@@ -194,13 +219,13 @@ div.TRX-pager{
     border: 5px solid #212529;
 
     text-align: center;
-    box-shadow: inset 0 0 20px 10px #00000060;
+    /* box-shadow: inset 0 0 20px 10px #00000060; */
 }
 
 @keyframes timer-pulse-keyframe {
-    0% {box-shadow: inset 0 0 20px 10px #00000060; border: 5px solid #212529;}
-    50% {box-shadow: inset 0 0 20px 10px #00000070; border: 5px solid #00000070;}
-    100% {box-shadow: inset 0 0 20px 10px #00000060; border: 5px solid #212529;}
+    0% {box-shadow: none;}
+    50% {box-shadow: inset 0 0 20px 10px #00000060; border: 5px solid #00000060;}
+    100% {box-shadow: none;}
 }
 
 .timer-pulse{
@@ -262,9 +287,24 @@ body > div.warning-sign > div{
 }
 
 /* iphone 5 */
-@media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2){
+/* @media only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2){ */
+
+/* @media only screen 
+and (min-device-width : 414px) 
+and (max-device-width : 736px) 
+and (orientation : landscape) { 
+    *{color: red;}
+} */
+/* 
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: landscape){ 
+
     *{
         font-size: 2.5vw;
+        color: red;
     }
 
     h1{
@@ -291,4 +331,4 @@ body > div.warning-sign > div{
     #page2 button:last-child{
         height: 67px !important;
     }
-}
+} */
